[project]
name = "comfyui_nai_api"
description = ""
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/Creeper-MZ/comfyui_nai_api"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui_nai_api"
Icon = ""
