[project]
name = "comfyui_nai_api"
description = "A node that can use Nai in Comfyui"
version = "1.0.3"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/Creeper-MZ/comfyui_nai_api"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "creeper"
DisplayName = "comfyui_nai_api"
Icon = ""