[project]
name = "comfyui_nai_api"
description = "A node that can use NovelAPI in Comfyui, now support some Director tools as processors. Support vibe,img2img,text2img"
version = "1.2"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/Creeper-MZ/comfyui_nai_api"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "creeper"
DisplayName = "comfyui_nai_api"
Icon = ""